fix cat picture slider on mobile

--- a/public/css/flex_md.css
+++ b/public/css/flex_md.css
@@ -24,7 +24,7 @@
   }
 
   .photos {
-    width: 88vw;
+    width: 100%;
   }
 
   .nav_donate > form > button {
