--- a/public/css/flex_sm.css
+++ b/public/css/flex_sm.css
@@ -92,7 +92,7 @@
   }
 
   .photos {
-    width: 86vw;
+    width: 100%;
     margin-bottom: 1.4rem;
   }
 
@@ -703,7 +703,7 @@
   }
 
   .photos {
-    width: 100vw;
+    width: 100%;
   }
 
     .slick-prev {
